<resources>
    <string name="app_name">Draughts</string>
    <string name="name_edit">Enter your name</string>
    <string name="enter_main_btn">Enter</string>
    <string name="exit_main_btn">Exit</string>
    <string name="error_name">Please Enrer your name !</string>
    <string name="label_login">Login Screen</string>
    <string name="play">Start Game</string>
    <string name="record_table">Record Table</string>
    <string name="menu_label">Menu</string>
    <string name="hello_text">Hello</string>
    <string name="Table_records">Table of records</string>
    <string name="user_name_T">Name</string>
    <string name="Time_T">Time</string>
    <string name="game_mode">Select Mode</string>
    <string name="bot_mode">Play against computer</string>
    <string name="user_mode">Play against User</string>
    <string name="continue_key">Continue</string>
    <string name="second_user_name">Enter Second user name</string>
    <string name = "extra_boardString">boardString</string>
    <string name = "extra_difficulty">difficulty</string>
    <string name = "StartingWin_doneButtonTag">doneButton</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="error_name_dialog">You did not Enter the Second User</string>
    <string name="rate_text">Please Rate Us</string>
    <string name="bye">Thank You! goodbye</string>
    <string name="finish_dia">Finish</string>
    <string name="error_table">You did not Choose Lavel</string>
    <string name="winner">is  Won! Do you Wish to Play Again?</string>
    <string name="easy_level">Easy Level</string>
    <string name="medium_level">Medium Level</string>
    <string name="difficult_level">Difficult Level</string>
    <string name="le">let\'s go to play !</string>
    <string name="MOVE_VALID">MOVE VALID</string>
    <string name="WRONG_NUM_STEPS">WRONG NUM STEPS</string>
    <string name="MOVING_WRONG_PIECE">MOVING WRONG PIECE</string>
    <string name="MOVE_OUT_OF_BOUNDS">MOVE OUT OF BOUNDS</string>
    <string name="WRONG_DIRECTION">WRONG DIRECTION</string>
    <string name="NOT_KILLING_MOVE">MUST KILLING</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Exit_Application">Exit Application</string>
    <string name="Are_You">Are You Sure You Want To Exit ?</string>
    <string name="Game_End">Game End</string>
    <string name="blue_turn">Blue Turn</string>
    <string name="red_turn">Red Turn</string>
    <string name="com">Computer</string>
</resources>