<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@color/White_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/main_img"
        android:src="@drawable/dm"
        android:gravity="center"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/main_img">

        <EditText
            android:layout_width="275dp"
            android:layout_height="70dp"
            android:hint="@string/name_edit"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:textSize="20sp"
            android:id="@+id/name_edit"
            android:gravity="center"
            android:background="@drawable/main_screen_shape"
            android:textStyle="italic"/>

        <Button
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:id="@+id/enter_btn"
            android:background="@drawable/main_screen_shape"
            android:textSize="20sp"
            android:text="@string/enter_main_btn"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="185dp"
            android:layout_height="80dp"
            android:id="@+id/exit_btn"
            android:background="@drawable/main_screen_shape"
            android:textSize="20sp"
            android:text="@string/exit_main_btn"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>